fix: psudo element taking overflow width

--- a/app/styles/pricing/cant-find.module.css
+++ b/app/styles/pricing/cant-find.module.css
@@ -23,6 +23,7 @@
 
     height: 100%;
     width: 100%;
+    left: 0;
 
     z-index: -1;
 }
