--- a/app/styles/pricing/core-features-toggle.module.css
+++ b/app/styles/pricing/core-features-toggle.module.css
@@ -44,9 +44,6 @@
     width: 355px;
     height: auto;
     flex-shrink: 0;
-
-    z-index: 3;
-    margin: 2px;
 }
 
 .left__corners__14 {
